# src/bff-admin/src/CodeForCoders.BffAdmin.Api/ApiModels/OrderStudent.cs
@@ -1,0 +1,3 @@
+namespace CodeForCoders.BffAdmin.Api.ApiModels;
+
+public sealed record OrderStudent(Guid StudentId, string Name, string Email);
